--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
         <div class="section-aboutus-images">
           <figure class="about-box__image">
-            <img src="images/5.jpg" alt="navigation icon" class="nav-hamburger" width=320" height="190" style="--i: 0" data-aos="fade-down-right" />
+            <img src="images/5.jpg" alt="navigation icon" class="nav-hamburger" width="320" height="190" style="--i: 0" data-aos="fade-down-right" />
             <img src="images/3.jpg" alt="navigation icon" class="nav-hamburger" width="320" height="190" style="--i: 1" data-aos="fade-down" />
             <img src="images/4.jpg" alt="navigation icon" class="nav-hamburger" width="320" height="190" style="--i: 2" data-aos="fade-down-left" />
           </figure>
