--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
       <nav class="header-nav" aria-label="navigation">
         <div class="logo-content">
-          <img src="/images/logo.jpg" alt="Logo" class="nav-icon" width="70" height="60" />
+          <img src="/images/logo.jpg" alt="Logo" class="nav-hamburger" width="70" height="60" />
           <div class="logo">Black and Bold Fitness</div>
         </div>
         <img src="/images/6.jpg" alt="navigation icon" class="nav-hamburger" width="30" height="30" />
