--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>Black and Bold Fitness</title>
-  <link rel="icon" type="./images/logo1.jpg" sizes="32x32" href="images/logo1.jpg" />
+  <link rel="icon" type="images/logo1.jpg" sizes="32x32" href="images/logo1.jpg" />
   <link rel="stylesheet" href="style/style.css" media="screen" />
   <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
@@ -20,10 +20,10 @@
     <div class="container">
       <nav class="header-nav" aria-label="navigation">
         <div class="logo-content">
-          <img src="/images/logo.jpg" alt="Logo" class="nav-hamburger" width="70" height="60" />
+          <img src="images/logo.jpg" alt="Logo" class="nav-icon" width="70" height="60" />
           <div class="logo">Black and Bold Fitness</div>
         </div>
-        <img src="/images/6.jpg" alt="navigation icon" class="nav-hamburger" width="30" height="30" />
+        <img src="images/6.jpg" alt="navigation icon" class="nav-hamburger" width="30" height="30" />
         <ul>
           <li>
                 <a href="#section-hero">Home</a>
