--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div class="team-member">
             <img src="images/coach1.webp" alt="Logo" class="member-logo" />
             <div class="team-memmber-info">
-              <div class="member-name">Arnold schwarzenegger</div>
+              <div class="member-name">Arnold</div>
               <div class="member-desg">Weight Lifting Coach</div>
               <div class="member-desc">Specializes in sculpting strength and muscle with precision</div>
             </div>
